// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardStatistics Component should render correctly with percentage < 75: arrow-icon-prop-outDiet 1`] = `"#BF3B44"`;

exports[`CardStatistics Component should render correctly with percentage < 75: btn-style-outDiet 1`] = `
[
  {
    "borderBottomLeftRadius": 8,
    "borderBottomRightRadius": 8,
    "borderTopLeftRadius": 8,
    "borderTopRightRadius": 8,
    "paddingBottom": 20,
    "paddingLeft": 16,
    "paddingRight": 16,
    "paddingTop": 20,
    "position": "relative",
  },
  {
    "backgroundColor": "#F4E6E7",
  },
]
`;

exports[`CardStatistics Component should render correctly with percentage >= 75: arrow-icon-prop-inDiet 1`] = `"#639339"`;

exports[`CardStatistics Component should render correctly with percentage >= 75: btn-style 1`] = `
[
  {
    "borderBottomLeftRadius": 8,
    "borderBottomRightRadius": 8,
    "borderTopLeftRadius": 8,
    "borderTopRightRadius": 8,
    "paddingBottom": 20,
    "paddingLeft": 16,
    "paddingRight": 16,
    "paddingTop": 20,
    "position": "relative",
  },
  {
    "backgroundColor": "#E5F0DB",
  },
]
`;

exports[`CardStatistics Component should render correctly with percentage >= 75: heading-style 1`] = `
{
  "color": "#1B1D1E",
  "fontFamily": "Nunito-Bold",
  "fontSize": 32,
  "lineHeight": 41.6,
}
`;

exports[`CardStatistics Component should render correctly with percentage >= 75: text-style 1`] = `
{
  "color": "#333638",
  "fontFamily": "Nunito-Regular",
  "fontSize": 14,
  "lineHeight": 18.2,
}
`;
